[project]
name = "GenStarRailMap"
version = "0.1.0"
description = ""
authors = [
    {name = "qwerdvd", email = "105906879+qwerdvd@users.noreply.github.com"},
]
dependencies = [
    "aiohttp>=3.9.0",
    "msgspec>=0.18.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"